...
      builder: (BuildContext context) {
        return AlertDialog(
          title: Text('Add Friend', style: GoogleFonts.markaziText(textStyle: TextStyle(fontSize: 30)),),
          content: Form(
            key: _formKey,
            child: TextFormField(
              key: const Key("PhoneNumberField"),
              controller: _phoneController,
              decoration: const InputDecoration(labelText: 'Friend\'s Phone Number'),
              keyboardType: TextInputType.phone,
              validator: (value) {
                if (value == null || value.isEmpty) {
                  return 'Please enter a phone number';
...

                    ),
                  )
              ),
            ),
            IconButton(
              key: const Key("ConfirmAddButton"),
              onPressed: () async {
                if (_formKey.currentState!.validate()) {
                  final phoneNumber = _phoneController.text;

                  bool  success = await _addFriend(phoneNumber);
                  Navigator.of(context).pop();
...
                context: context,
                delegate: FriendSearchDelegate(allFriends),
              );
            },
          ),
          IconButton(
            key: const Key("AddFriendButton"),
            icon: const Icon(
              FluentSystemIcons.ic_fluent_person_add_regular,
              size: 26,
            ),
            tooltip: "Add Friend",
            onPressed: _showAddFriendDialog,
...
