...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: const Color(0xFFf5f4f3),
      body: CustomScrollView(
        key: const Key("HomeAppbar"),
        slivers: [
          SliverAppBar(
            surfaceTintColor: const Color(0xffcfcfcf),
            centerTitle: true,
            backgroundColor: const Color(0xFFf5f4f3),
            pinned: true,
...
                padding: const EdgeInsets.symmetric(horizontal: 15),
                child: Row (
                mainAxisAlignment: MainAxisAlignment.spaceBetween,
                children: [
                  Text("Friends", style: AppStyles.headLineStyle2,),
                  IconButton(
                    key: const Key("AllFriendsPageButton"),
                      tooltip: "View All",
                      // highlightColor: Colors.transparent,
                      onPressed: () {
                        Navigator.pushNamed(context, AppRoutes.allFriends);
                      },
                      padding: const EdgeInsets.all(4),
...
